--- a/tasks/section02.yml
+++ b/tasks/section02.yml
@@ -636,6 +636,12 @@
     - rule_2.3.1.2
     - patch
 
+- name: "2.3.1.6 Configure 'Accounts: Rename guest account'"
+  win_security_policy:
+    section: System Access
+    key: NewGuestName
+    value: "Test Guest"
+
 - name: "SCORED | 2.3.1.3 | PATCH | L1 Ensure Accounts Guest account status is set to Disabled MS only"
   win_security_policy:
     section: System Access
@@ -1536,8 +1542,3 @@
     - rule_2.3.17.8
     - patch
 
-- name: "2.3.1.6 Configure 'Accounts: Rename guest account'"
-  win_security_policy:
-    section: System Access
-    key: NewGuestName
-    value: Test Guest
