--- a/tasks/section02.yml
+++ b/tasks/section02.yml
@@ -636,11 +636,6 @@
     - rule_2.3.1.2
     - patch
 
-- name: "2.3.1.6 Configure 'Accounts: Rename guest account'"
-  win_security_policy:
-    section: System Access
-    key: NewGuestName
-    value: "Test Guest"
 
 - name: "SCORED | 2.3.1.3 | PATCH | L1 Ensure Accounts Guest account status is set to Disabled MS only"
   win_security_policy:
@@ -681,7 +676,11 @@
 #     - rule_2.3.1.5
 #     - patch
 
-
+- name: "2.3.1.6 Configure 'Accounts: Rename guest account'"
+  win_security_policy:
+    section: System Access
+    key: newguestname
+    value: Test Guest
 
 - name: "SCORED | 2.3.2.1 | PATCH | L1 Ensure Audit Force audit policy subcategory settings Windows Vista or later to override audit policy category settings is set to Enabled"
   win_regedit:
