--- a/tasks/section09.yml
+++ b/tasks/section09.yml
@@ -43,7 +43,7 @@
   win_regedit:
     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\DomainProfile
     name: DisableNotifications
-    data: 0
+    data: 1
     type: dword
   when:
     - rule_9_1_4
@@ -154,7 +154,7 @@
   win_regedit:
     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PrivateProfile
     name: DisableNotifications
-    data: 0
+    data: 1
     type: dword
   when:
     - rule_9_2_4
@@ -233,19 +233,19 @@
     - rule_9.3.1
     - patch
 
-# - name: "SCORED | 9.3.2 | PATCH | (L1) Ensure 'Windows Firewall: Public: Inbound connections' is set to 'Block (default)'"
-#   win_regedit:
-#     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-#     name: DefaultInboundAction
-#     data: 1
-#     type: dword
-#   when:
-#     - rule_9_3_2
-#   tags:
-#     - level1-domaincontroller
-#     - level1-memberserver
-#     - rule_9.3.2
-#     - patch
+- name: "SCORED | 9.3.2 | PATCH | (L1) Ensure 'Windows Firewall: Public: Inbound connections' is set to 'Block (default)'"
+  win_regedit:
+    path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
+    name: DefaultInboundAction
+    data: 0
+    type: dword
+  when:
+    - rule_9_3_2
+  tags:
+    - level1-domaincontroller
+    - level1-memberserver
+    - rule_9.3.2
+    - patch
 
 - name: "SCORED | 9.3.3 | PATCH | (L1) Ensure 'Windows Firewall: Public: Outbound connections' is set to 'Allow (default)'"
   win_regedit:
@@ -265,7 +265,7 @@
   win_regedit:
     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
     name: DisableNotifications
-    data: 0
+    data: 1
     type: dword
   when:
     - rule_9_3_4
