--- a/tasks/section02.yml
+++ b/tasks/section02.yml
@@ -10,7 +10,7 @@
     Secedit /Export /Areas SecurityPolicy /CFG C:\users\FileName.Txt
     cat C:\users\FileName.Txt
 
-    
+
 - name: "SCORED | 2.2.1 | PATCH | L1 Ensure Access Credential Manager as a trusted caller is set to No One"
   win_user_right:
     name: SeTrustedCredManAccessPrivilege
@@ -621,6 +621,11 @@
     - rule_2.2.48
     - patch
 
+- name: "check if its worked"
+  win_shell: |
+    Secedit /Export /Areas SecurityPolicy /CFG C:\users\FileName1.Txt
+    cat C:\users\FileName1.Txt
+
 # - name: "SCORED | 2.3.1.1 | PATCH | L1 Ensure Accounts Administrator account status is set to Disabled MS only"
 #   win_security_policy:
 #     section: System Access
@@ -1098,6 +1103,11 @@
     - rule_2.3.9.5
     - patch
 
+- name: "check if its worked"
+  win_shell: |
+    Secedit /Export /Areas SecurityPolicy /CFG C:\users\FileName3.Txt
+    cat C:\users\FileName3.Txt
+
 - name: "SCORED | 2.3.10.1 | PATCH | L1 Ensure Network access Allow anonymous SIDName translation is set to Disabled"
   win_security_policy:
     section: System Access
@@ -1548,4 +1558,9 @@
     - level2
     - rule_2.3.17.8
     - patch
+
+- name: "check if its worked"
+  win_shell: |
+    Secedit /Export /Areas SecurityPolicy /CFG C:\users\FileName2.Txt
+    cat C:\users\FileName2.Txt
 
