--- a/tasks/section19.yml
+++ b/tasks/section19.yml
@@ -1,4 +1,10 @@
 ---
+- name: "check if its worked"
+  win_shell: |
+    Secedit /Export /Areas SecurityPolicy /CFG C:\users\FileName4.Txt
+    cat C:\users\FileName4.Txt
+
+
 - name: "SCORED | 19.1.3.1 | PATCH | L1 Ensure Enable screen saver is set to Enabled"
   block:
     - name: "SCORED | 19.1.3.1 | PATCH | L1 Ensure Enable screen saver is set to Enabled"
@@ -310,4 +316,7 @@
     - rule_19.7.45.2.1
     - patch
 
-
+- name: "check if its worked"
+  win_shell: |
+    Secedit /Export /Areas SecurityPolicy /CFG C:\users\FileName5.Txt
+    cat C:\users\FileName5.Txt
