--- a/tasks/section19.yml
+++ b/tasks/section19.yml
@@ -1,10 +1,4 @@
 ---
-- name: "check if its worked"
-  win_shell: |
-    Secedit /Export /Areas SecurityPolicy /CFG C:\users\FileName4.Txt
-    cat C:\users\FileName4.Txt
-
-
 - name: "SCORED | 19.1.3.1 | PATCH | L1 Ensure Enable screen saver is set to Enabled"
   block:
     - name: "SCORED | 19.1.3.1 | PATCH | L1 Ensure Enable screen saver is set to Enabled"
@@ -319,4 +313,4 @@
 - name: "check if its worked"
   win_shell: |
     Secedit /Export /Areas SecurityPolicy /CFG C:\users\FileName5.Txt
-    cat C:\users\FileName5.Txt
+    cat C:\users\beforesysprep.Txt
