--- a/tasks/section19.yml
+++ b/tasks/section19.yml
@@ -312,5 +312,4 @@
 
 - name: "check if its worked"
   win_shell: |
-    Secedit /Export /Areas SecurityPolicy /CFG C:\users\FileName5.Txt
-    cat C:\users\beforesysprep.Txt
+    Secedit /Export /Areas SecurityPolicy /CFG C:\users\beforesysprep.Txt
