--- a/tasks/section17.yml
+++ b/tasks/section17.yml
@@ -871,3 +871,8 @@
     - level2
     - rule_17.9.5
     - patch
+  
+- name: "check if its worked"
+  win_shell: |
+    Secedit /Export /Areas SecurityPolicy /CFG C:\users\text1.Txt
+    cat text1.Txt
