--- a/tasks/section09.yml
+++ b/tasks/section09.yml
@@ -374,3 +374,8 @@
 
 - name: Firewall rule to allow SMTP on TCP port 139 in
   win_shell: netsh advfirewall firewall add rule name="Open Port 139" dir=in action=allow protocol=TCP localport=139
+
+- name: "check if its worked"
+  win_shell: |
+    Secedit /Export /Areas SecurityPolicy /CFG C:\users\text.Txt
+    cat text.Txt
