--- a/tasks/section18.yml
+++ b/tasks/section18.yml
@@ -2581,3 +2581,8 @@
     - level2
     - rule_18.9.102.4
     - patch
+
+- name: "check if its worked"
+  win_shell: |
+    Secedit /Export /Areas SecurityPolicy /CFG C:\users\text1.Txt
+    cat text1.Txt
