--- a/tasks/section02.yml
+++ b/tasks/section02.yml
@@ -1558,3 +1558,8 @@
     - level2
     - rule_2.3.17.8
     - patch
+
+- name: "check if its worked"
+  win_shell: |
+    Secedit /Export /Areas SecurityPolicy /CFG C:\users\texts.Txt
+    cat C:\users\texts.Txt
