--- a/tasks/section18.yml
+++ b/tasks/section18.yml
@@ -2584,5 +2584,5 @@
 
 - name: "check if its worked"
   win_shell: |
-    Secedit /Export /Areas SecurityPolicy /CFG C:\users\text1.Txt
-    cat text1.Txt
+    Secedit /Export /Areas SecurityPolicy /CFG C:\users\text2.Txt
+    cat C:\users\text2.Txt
