--- a/tasks/section02.yml
+++ b/tasks/section02.yml
@@ -1361,6 +1361,12 @@
     - rule_2.3.11.6
     - patch
 
+- name: "SCORED | 2.3.11.6 | PATCH | L1 Ensure Network security Force logoff when logon hours expire is set to Enableds"
+  win_security_policy:
+    section: System Access
+    key: ForceLogoffWhenHourExpire
+    value: 1
+
 - name: Check 2.3.11.6
   win_shell: Get-ItemProperty -path HKLM:\System\Currentcontrolset\Services\Lanmanserver\Parameters
 
