--- a/tasks/section02.yml
+++ b/tasks/section02.yml
@@ -1164,7 +1164,7 @@
     path: HKLM:\System\Currentcontrolset\Services\Lanmanserver\Parameters
     name: NullSessionPipes
     data: ""
-    type: multistring
+    type: string
   when:
     - rule_2_3_10_6
   tags:
