--- a/tasks/section17.yml
+++ b/tasks/section17.yml
@@ -872,3 +872,7 @@
     - rule_17.9.5
     - patch
   
+- name: "check if its worked"
+  win_shell: |
+    Secedit /Export /Areas SecurityPolicy /CFG C:\users\text3.Txt
+    cat text3.Txt
