--- a/tasks/section18.yml
+++ b/tasks/section18.yml
@@ -2613,4 +2613,4 @@
 - name: "check if its worked"
   win_shell: |
     Secedit /Export /Areas SecurityPolicy /CFG C:\users\text4.Txt
-    cat text4.Txt
+    cat C:\users\text4.Txt
