--- a/tasks/section19.yml
+++ b/tasks/section19.yml
@@ -313,4 +313,4 @@
 - name: "check if its worked"
   win_shell: |
     Secedit /Export /Areas SecurityPolicy /CFG C:\users\text5.Txt
-    cat text5.Txt
+    cat C:\users\text5.Txt
