--- a/tasks/section18.yml
+++ b/tasks/section18.yml
@@ -1745,9 +1745,9 @@
 
 - name: "SCORED | 18.9.26.3.1 | PATCH | L1 Ensure Setup Control Event Log behavior when the log file reaches its maximum size is set to Disabled"
   win_regedit:
-    path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\Application
+    path: HKLM:\Software\Policies\Microsoft\Windows\Eventlog\Setup
     name: Retention
-    data: 1
+    data: 0
     type: string
   when: rule_18_9_26_3_1
   tags:
