--- a/tasks/section09.yml
+++ b/tasks/section09.yml
@@ -224,7 +224,7 @@
 - name: "SCORED | 9.3.1 | PATCH | (L1) Ensure 'Windows Firewall: Public: Firewall state' is set to 'On (recommended)'"
   win_regedit:
     path: HKLM:\SOFTWARE\Policies\Microsoft\WindowsFirewall\PublicProfile
-    name: DefaultInboundAction
+    name: EnableFirewall
     data: 1
     type: dword
   when:
