--- a/tasks/section18.yml
+++ b/tasks/section18.yml
@@ -263,10 +263,12 @@
     - patch
 
 - name: "SCORED | 18.3.2 | AUDIT | L1 Ensure Configure SMB v1 client driver is set to Enabled Disable driver recommended"
-  command: "echo true"
-  register: result
-  changed_when: no
-  ignore_errors: yes
+  win_regedit:
+    path: HKLM:\SYSTEM\CurrentControlSet\Services\mrxsmb10
+    name: Start
+    data: 4
+    type: dword
+    state: present
   when:
     - is_implemented
     - rule_18_3_2
@@ -324,7 +326,6 @@
   when:
     - is_implemented
     - rule_18_3_5
-    - ansible_windows_domain_role == "Primary domain controller"
   tags:
     - level1
     - level2
@@ -336,7 +337,6 @@
   when:
     - is_implemented
     - rule_18_3_5
-    - ansible_windows_domain_role == "Primary domain controller"
   tags:
     - level1
     - level2
@@ -786,7 +786,7 @@
   win_regedit:
     path: HKLM:\Software\Policies\Microsoft\Windows\Wcmsvc\Grouppolicy
     name: fMinimizeConnections
-    data: 1
+    data: 3
     type: dword
   when: rule_18_5_21_1
   tags:
@@ -1696,7 +1696,7 @@
     path: HKLM:\Software\Policies\Microsoft\Windows\EventLog\Application
     name: Retention
     data: 0
-    type: string
+    type: dword
   when: rule_18_9_26_1_1
   tags:
     - level1
@@ -2202,7 +2202,7 @@
 - name: "SCORED | 18.9.77.13.1.1 | PATCH | L1 Ensure Configure Attack Surface Reduction rules is set to Enabled"
   win_regedit:
     path: HKLM:\Software\Policies\Microsoft\Windows Defender\Windows Defender Exploit Guard\ASR
-    name: ExploitGuard_ASR_Rules
+    name: EnableNetworkProtection
     data: 1
     type: dword
   when: rule_18_9_77_13_1_1
@@ -2541,7 +2541,7 @@
       win_regedit:
         path: HKLM:\Software\Policies\Microsoft\Windows\WindowsUpdate
         name: BranchReadinessLevel
-        data: 16
+        data: 32
         type: dword
   when: rule_18_9_102_1_2
   tags:
