--- a/tasks/section17.yml
+++ b/tasks/section17.yml
@@ -1,70 +1,28 @@
 ---
-- name: "SCORED | 17.1.1 | AUDIT | L1 Ensure Audit Credential Validation is set to Success and Failure"
-  win_shell: AuditPol /get /subcategory:"Credential Validation" -r | ConvertFrom-Csv | Select-Object -expand "Inclusion Setting"
-  register: rule_17_1_1_audit
-  changed_when: no
-  ignore_errors: yes
-  when: rule_17_1_1
-  tags:
-    - level1
-    - level2
-    - rule_17.1.1
-    - audit
-
 - name: "SCORED | 17.1.1 | PATCH | L1 Ensure Audit Credential Validation is set to Success and Failure"
-  block:
-    - name: "SCORED | 17.1.1 | PATCH | L1 Ensure Audit Credential Validation is set to Success and Failure | Success"
-      win_shell: AuditPol /set /subcategory:"Credential Validation" /success:enable
-      when: "'Success' not in rule_17_1_1_audit.stdout"
-      changed_when: "'Success' not in rule_17_1_1_audit.stdout"
-
-    - name: "SCORED | 17.1.1 | PATCH | L1 Ensure Audit Credential Validation is set to Success and Failure | Failure"
-      win_shell: AuditPol /set /subcategory:"Credential Validation" /failure:enable
-      when: "'Failure' not in rule_17_1_1_audit.stdout"
-      changed_when: "'Failure' not in rule_17_1_1_audit.stdout"
+  win_audit_policy_system:
+    subcategory: Credential Validation
+    audit_type: success, failure
   when:
     - rule_17_1_1
-    - rule_17_1_1_audit is defined
-    - ansible_windows_domain_role == "Primary domain controller"
-    - "'Success' not in rule_17_1_1_audit.stdout"
   tags:
     - level1
     - level2
     - rule_17.1.1
     - patch
 
-- name: "SCORED | 17.2.1 | AUDIT | L1 Ensure Audit Application Group Management is set to Success and Failure"
-  win_shell: AuditPol /get /subcategory:"Security Group Management" -r | ConvertFrom-Csv | Select-Object -expand "Inclusion Setting"
-  register: rule_17_2_1_audit
-  changed_when: no
-  ignore_errors: yes
-  when: rule_17_2_1
-  tags:
-    - level1
-    - level2
-    - rule_17.2.1
-    - audit
-
 - name: "SCORED | 17.2.1 | PATCH | L1 Ensure Audit Application Group Management is set to Success and Failure"
-  block:
-    - name: "SCORED | 17.2.1 | PATCH | L1 Ensure Audit Application Group Management is set to Success and Failure | Success"
-      win_shell: AuditPol /set /subcategory:"Security Group Management" /success:enable
-      when: "'Success' not in rule_17_2_1_audit.stdout"
-      changed_when: "'Success' not in rule_17_2_1_audit.stdout"
-
-    - name: "SCORED | 17.2.1 | PATCH | L1 Ensure Audit Application Group Management is set to Success and Failure | Failure"
-      win_shell: AuditPol /set /subcategory:"Security Group Management" /failure:enable
-      when: "'Failure' not in rule_17_2_1_audit.stdout"
-      changed_when: "'Failure' not in rule_17_2_1_audit.stdout"
+  win_audit_policy_system:
+    subcategory: Security Group Management
+    audit_type: success, failure
   when:
     - rule_17_2_1
-    - rule_17_2_1_audit is defined
-    - "'Success' not in rule_17_2_1_audit.stdout"
   tags:
     - level1
     - level2
     - rule_17.2.1
     - patch
+
 
 - name: "SCORED | 17.2.2 | AUDIT | L1 Ensure Audit Computer Account Management is set to include Success DC only"
   win_shell: AuditPol /get /subcategory:"Computer Account Management" -r | ConvertFrom-Csv | Select-Object -expand "Inclusion Setting"
@@ -168,42 +126,29 @@
     - rule_17.2.5
     - patch
 
-- name: "SCORED | 17.2.6 | AUDIT | L1 Ensure Audit User Account Management is set to Success and Failure"
-  win_shell: AuditPol /get /subcategory:"User Account Management" -r | ConvertFrom-Csv | Select-Object -expand "Inclusion Setting"
-  register: rule_17_2_6_audit
-  changed_when: no
-  ignore_errors: yes
-  when: rule_17_2_6
+- name: "SCORED | 17.2.1 | PATCH | L1 Ensure Audit Application Group Management is set to Success and Failure"
+  win_audit_policy_system:
+    subcategory: Security Group Management
+    audit_type: success, failure
+  when:
+    - rule_17_2_1
   tags:
     - level1
     - level2
-    - rule_17.2.6
-    - audit
-
-- name: "SCORED | 17.2.6 | PATCH | L1 Ensure Audit User Account Management is set to Success and Failure"
-  block:
-    - name: "SCORED | 17.2.6 | PATCH | L1 Ensure Audit User Account Management is set to Success and Failure | Success"
-      win_shell: AuditPol /set /subcategory:"User Account Management" /success:enable
-      when: "'Success' not in rule_17_2_6_audit.stdout"
-      changed_when: "'Success' not in rule_17_2_6_audit.stdout"
-
-    - name: "SCORED | 17.2.6 | PATCH | L1 Ensure Audit User Account Management is set to Success and Failure | Failure"
-      win_shell: AuditPol /set /subcategory:"User Account Management" /failure:enable
-      when: "'Failure' not in rule_17_2_6_audit.stdout"
-      changed_when: "'Failure' not in rule_17_2_6_audit.stdout"
+    - rule_17.2.1
+    - patch
+  
+- name: "SCORED | 17.2.6 | AUDIT | L1 Ensure Audit User Account Management is set to Success and Failure"
+  win_audit_policy_system:
+    subcategory: User Account Management
+    audit_type: success, failure
   when:
     - rule_17_2_6
-    - rule_17_2_6_audit is defined
   tags:
     - level1
     - level2
     - rule_17.2.6
     - patch
-
-- name: "SCORED | 17.2.6 | AUDIT | L1 Ensure Audit User Account Management is set to Success and Failurew"
-  win_audit_policy_system:
-    category: Account Management
-    audit_type: success, failure
 
 - name: "SCORED | 17.3.1 | AUDIT | L1 Ensure Audit PNP Activity is set to include Success"
   win_shell: AuditPol /get /subcategory:"Plug and Play Events" -r | ConvertFrom-Csv | Select-Object -expand "Inclusion Setting"
@@ -375,34 +320,12 @@
     - rule_17.5.3
     - patch
 
-- name: "SCORED | 17.5.4 | AUDIT | L1 Ensure Audit Logon is set to Success and Failure"
-  win_shell: AuditPol /get /subcategory:"Logon" -r | ConvertFrom-Csv | Select-Object -expand "Inclusion Setting"
-  register: rule_17_5_4_audit
-  changed_when: no
-  ignore_errors: yes
-  when: rule_17_5_4
-  tags:
-    - level1
-    - level2
-    - rule_17.5.4
-    - audit
-
-- name: "SCORED | 17.5.4 | PATCH | L1 Ensure Audit Logon is set to Success and Failure"
-  block:
-  - name: "SCORED | 17.5.4 | PATCH | L1 Ensure Audit Logon is set to Success and Failure | Success"
-    win_shell: AuditPol /set /subcategory:"Logon" /success:enable
-    changed_when: "'Success' not in rule_17_5_4_audit.stdout"
-    when: 
-      - rule_17_5_4_audit is defined
-      - "'Failure' not in rule_17_5_4_audit.stdout"
-
-  - name: "SCORED | 17.5.4 | PATCH | L1 Ensure Audit Logon is set to Success and Failure | Failure"
-    win_shell: AuditPol /set /subcategory:"Logon" /failure:enable
-    changed_when: "'Failure' not in rule_17_5_4_audit.stdout"
-    when: 
-      - rule_17_5_4_audit is defined
-      - "'Failure' not in rule_17_5_4_audit.stdout"
-  when: rule_17_5_4
+- name: "SCORED | 17.5.4 | PATCH | L1 Ensure Audit Logon is set to Success and Failure | Failure"
+  win_audit_policy_system:
+    subcategory: Logon
+    audit_type: success, failure
+  when:
+    - rule_17_5_4
   tags:
     - level1
     - level2
@@ -437,6 +360,18 @@
       when:
         - rule_17_5_5_audit is defined
         - "'Failure' not in rule_17_5_5_audit.stdout"
+  when:
+    - rule_17_5_5
+  tags:
+    - level1
+    - level2
+    - rule_17.5.5
+    - patch
+
+- name: "SCORED | 17.5.5 | PATCH | L1 Ensure Audit Other LogonLogoff Events is set to Success and Failure"
+  win_audit_policy_system:
+    subcategory: Other Logon/Logoff Events
+    audit_type: success, failure
   when:
     - rule_17_5_5
   tags:
@@ -690,102 +625,38 @@
     - rule_17.7.5
     - patch
 
-- name: "SCORED | 17.8.1 | AUDIT | L1 Ensure Audit Sensitive Privilege Use is set to Success and Failure"
-  win_shell: AuditPol /get /subcategory:"Sensitive Privilege Use" -r | ConvertFrom-Csv | Select-Object -expand "Inclusion Setting"
-  register: rule_17_8_1_audit
-  changed_when: no
-  ignore_errors: yes
-  when: rule_17_8_1
-  tags:
-    - level1
-    - level2
-    - rule_17.8.1
-    - audit
-
 - name: "SCORED | 17.8.1 | PATCH | L1 Ensure Audit Sensitive Privilege Use is set to Success and Failure"
-  block:
-    - name: "SCORED | 17.8.1 | PATCH | L1 Ensure Audit Sensitive Privilege Use is set to Success and Failure | Success"
-      win_shell: AuditPol /set /subcategory:"Sensitive Privilege Use" /success:enable
-      changed_when: "'Success' not in rule_17_8_1_audit.stdout"
-      when:
-        - rule_17_8_1_audit is defined
-        - "'Success' not in rule_17_8_1_audit.stdout"
-
-    - name: "SCORED | 17.8.1 | PATCH | L1 Ensure Audit Sensitive Privilege Use is set to Success and Failure | Failure"
-      win_shell: AuditPol /set /subcategory:"Sensitive Privilege Use" /failure:enable
-      changed_when: "'Failure' not in rule_17_8_1_audit.stdout"
-      when:
-        - rule_17_8_1_audit is defined
-        - "'Failure' not in rule_17_8_1_audit.stdout"
-
-  when: rule_17_8_1
+  win_audit_policy_system:
+    subcategory: Sensitive Privilege Use
+    audit_type: success, failure
+  when:
+    - rule_17_8_1
   tags:
     - level1
     - level2
     - rule_17.8.1
     - patch
 
-- name: "SCORED | 17.9.1 | AUDIT | L1 Ensure Audit IPsec Driver is set to Success and Failure"
-  win_shell: AuditPol /get /subcategory:"IPsec Driver" -r | ConvertFrom-Csv | Select-Object -expand "Inclusion Setting"
-  register: rule_17_9_1_audit
-  changed_when: no
-  ignore_errors: yes
-  when: rule_17_9_1
-  tags:
-    - level1
-    - level2
-    - rule_17.9.1
-    - audit
 
 - name: "SCORED | 17.9.1 | PATCH | L1 Ensure Audit IPsec Driver is set to Success and Failure"
-  block:
-    - name: "SCORED | 17.9.1 | PATCH | L1 Ensure Audit IPsec Driver is set to Success and Failure | Success"
-      win_shell: AuditPol /set /subcategory:"IPsec Driver" /success:enable
-      changed_when: "'Success' not in rule_17_9_1_audit.stdout"
-      when:
-        - rule_17_9_1_audit is defined
-        - "'Success' not in rule_17_9_1_audit.stdout"
-    - name: "SCORED | 17.9.1 | PATCH | L1 Ensure Audit IPsec Driver is set to Success and Failure | Failure"
-      win_shell: AuditPol /set /subcategory:"IPsec Driver" /failure:enable
-      changed_when: "'Failure' not in rule_17_9_1_audit.stdout"
-      when:
-        - rule_17_9_1_audit is defined
-        - "'Failure' not in rule_17_9_1_audit.stdout"
-
-  when: rule_17_9_1
+  win_audit_policy_system:
+    subcategory: IPsec Driver
+    audit_type: success, failure
+  when:
+    - rule_17_9_1
   tags:
     - level1
     - level2
     - rule_17.9.1
     - patch
 
-- name: "SCORED | 17.9.2 | AUDIT | L1 Ensure Audit Other System Events is set to Success and Failure"
-  win_shell: AuditPol /get /subcategory:"Other System Events" -r | ConvertFrom-Csv | Select-Object -expand "Inclusion Setting"
-  register: rule_17_9_2_audit
-  changed_when: no
-  ignore_errors: yes
-  when: rule_17_9_2
-  tags:
-    - level1
-    - level2
-    - rule_17.9.2
-    - audit
 
 - name: "SCORED | 17.9.2 | PATCH | L1 Ensure Audit Other System Events is set to Success and Failure"
-  block:
-    - name: "SCORED | 17.9.2 | PATCH | L1 Ensure Audit Other System Events is set to Success and Failure | Success"
-      win_shell: AuditPol /set /subcategory:"Other System Events" /success:enable
-      changed_when: "'Success' not in rule_17_9_2_audit.stdout"
-      when:
-        - rule_17_9_2_audit is defined
-        - "'Success' not in rule_17_9_2_audit.stdout"
-    - name: "SCORED | 17.9.2 | PATCH | L1 Ensure Audit Other System Events is set to Success and Failure | Failure"
-      win_shell: AuditPol /set /subcategory:"Other System Events" /failure:enable
-      changed_when: "'Failure' not in rule_17_9_2_audit.stdout"
-      when:
-        - rule_17_9_2_audit is defined
-        - "'Failure' not in rule_17_9_2_audit.stdout"
-  when: rule_17_9_2
+  win_audit_policy_system:
+    subcategory: Other System Events
+    audit_type: success, failure
+  when:
+    - rule_17_9_2
   tags:
     - level1
     - level2
@@ -841,38 +712,15 @@
     - level2
     - rule_17.9.4
     - patch
-
-- name: "SCORED | 17.9.5 | AUDIT | L1 Ensure Audit System Integrity is set to Success and Failure"
-  win_shell: AuditPol /get /subcategory:"System Integrity" -r | ConvertFrom-Csv | Select-Object -expand "Inclusion Setting"
-  register: rule_17_9_5_audit
-  changed_when: no
-  ignore_errors: yes
-  when: rule_17_9_5
-  tags:
-    - level1
-    - level2
-    - rule_17.9.5
-    - audit
-
+  
 - name: "SCORED | 17.9.5 | PATCH | L1 Ensure Audit System Integrity is set to Success and Failure"
-  block:
-    - name: "SCORED | 17.9.5 | PATCH | L1 Ensure Audit System Integrity is set to Success and Failure | Success"
-      win_shell: AuditPol /set /subcategory:"System Integrity" /success:enable
-      changed_when: "'Success' not in rule_17_9_5_audit.stdout"
-      when:
-        - rule_17_9_5_audit is defined
-        - "'Success' not in rule_17_9_5_audit.stdout"
-
-    - name: "SCORED | 17.9.5 | PATCH | L1 Ensure Audit System Integrity is set to Success and Failure | Failure"
-      win_shell: AuditPol /set /subcategory:"System Integrity" /failure:enable
-      changed_when: "'Failure' not in rule_17_9_5_audit.stdout"
-      when:
-        - rule_17_9_5_audit is defined
-        - "'Failure' not in rule_17_9_5_audit.stdout"
-  when: rule_17_9_5
+  win_audit_policy_system:
+    subcategory: IPsec Driver
+    audit_type: success, failure
+  when:
+    - rule_17_9_5
   tags:
     - level1
     - level2
     - rule_17.9.5
     - patch
-  
