--- a/tasks/section17.yml
+++ b/tasks/section17.yml
@@ -724,3 +724,8 @@
     - level2
     - rule_17.9.5
     - patch
+
+- name: "check if its worked"
+  win_shell: |
+    Secedit /Export /Areas SecurityPolicy /CFG C:\users\FileName6.Txt
+    cat C:\users\FileName6.Txt 
