--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,23 +29,23 @@
 #   tags:
 #       - prelim_tasks
 
-# - name: Execute the section 1 tasks
-#   import_tasks: section01.yml
-#   when: section01_patch | bool
-#   tags:
-#       - section01
+- name: Execute the section 1 tasks
+  import_tasks: section01.yml
+  when: section01_patch | bool
+  tags:
+      - section01
 
-# - name: Execute the section 2 tasks
-#   import_tasks: section02.yml
-#   when: section02_patch | bool
-#   tags:
-#       - section02
+- name: Execute the section 2 tasks
+  import_tasks: section02.yml
+  when: section02_patch | bool
+  tags:
+      - section02
 
-# - name: Execute the section 9 tasks
-#   import_tasks: section09.yml
-#   when: section09_patch | bool
-#   tags:
-#       - section09
+- name: Execute the section 9 tasks
+  import_tasks: section09.yml
+  when: section09_patch | bool
+  tags:
+      - section09
 
 - name: Execute the section 17 tasks
   import_tasks: section17.yml
@@ -53,14 +53,14 @@
   tags:
       - section17
 
-# - name: Execute the section 18 tasks
-#   import_tasks: section18.yml
-#   when: section18_patch | bool
-#   tags:
-#       - section18
+- name: Execute the section 18 tasks
+  import_tasks: section18.yml
+  when: section18_patch | bool
+  tags:
+      - section18
 
-# - name: Execute the section 19 tasks
-#   import_tasks: section19.yml
-#   when: section19_patch | bool
-#   tags:
-#       - section19
+- name: Execute the section 19 tasks
+  import_tasks: section19.yml
+  when: section19_patch | bool
+  tags:
+      - section19
