--- a/tasks/section18.yml
+++ b/tasks/section18.yml
@@ -2429,6 +2429,33 @@
     - rule_18.9.97.1.2
     - patch
 
+- name: "SCORED | 18.9.97.1.3 | PATCH | L1 Ensure Disallow Digest authentication is set to Enabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Client
+    name: AllowDigest
+    data: 0
+    type: dword
+  when: rule_18_9_97_1_3
+  tags:
+    - level1
+    - level2
+    - rule_18.9.97.1.3
+    - patch
+
+- name: "SCORED | 18.9.97.2.1 | PATCH | L1 Ensure Allow Basic authentication is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Service
+    name: AllowBasic
+    data: 0
+    type: dword
+  when:
+    - rule_18_9_97_2_1
+    - not win_skip_for_test
+  tags:
+    - level1
+    - level2
+    - rule_18.9.97.2.1
+    - patch
 
 #This control will have to be set to Enabled (1) to allow for continued remote management via Ansible following machine restart
 - name: "SCORED | 18.9.97.2.2 | PATCH | L2 Ensure Allow remote server management through WinRM is set to Disabled"
