--- a/tasks/section18.yml
+++ b/tasks/section18.yml
@@ -2414,20 +2414,20 @@
     - rule_18.9.97.1.1
     - patch
 
-- name: "SCORED | 18.9.97.1.2 | PATCH | L1 Ensure Allow unencrypted traffic is set to Disabled"
-  win_regedit:
-    path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Client
-    name: AllowUnencryptedTraffic
-    data: 0
-    type: dword
-  when:
-    - rule_18_9_97_1_2
-    - not win_skip_for_test
-  tags:
-    - level1
-    - level2
-    - rule_18.9.97.1.2
-    - patch
+# - name: "SCORED | 18.9.97.1.2 | PATCH | L1 Ensure Allow unencrypted traffic is set to Disabled"
+#   win_regedit:
+#     path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Client
+#     name: AllowUnencryptedTraffic
+#     data: 0
+#     type: dword
+#   when:
+#     - rule_18_9_97_1_2
+#     - not win_skip_for_test
+#   tags:
+#     - level1
+#     - level2
+#     - rule_18.9.97.1.2
+#     - patch
 
 - name: "SCORED | 18.9.97.1.3 | PATCH | L1 Ensure Disallow Digest authentication is set to Enabled"
   win_regedit:
