--- a/tasks/section18.yml
+++ b/tasks/section18.yml
@@ -2414,20 +2414,20 @@
     - rule_18.9.97.1.1
     - patch
 
-# - name: "SCORED | 18.9.97.1.2 | PATCH | L1 Ensure Allow unencrypted traffic is set to Disabled"
-#   win_regedit:
-#     path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Client
-#     name: AllowUnencryptedTraffic
-#     data: 0
-#     type: dword
-#   when:
-#     - rule_18_9_97_1_2
-#     - not win_skip_for_test
-#   tags:
-#     - level1
-#     - level2
-#     - rule_18.9.97.1.2
-#     - patch
+- name: "SCORED | 18.9.97.1.2 | PATCH | L1 Ensure Allow unencrypted traffic is set to Disabled"
+  win_regedit:
+    path: HKLM:\Software\Policies\Microsoft\Windows\Winrm\Client
+    name: AllowUnencryptedTraffic
+    data: 0
+    type: dword
+  when:
+    - rule_18_9_97_1_2
+    - not win_skip_for_test
+  tags:
+    - level1
+    - level2
+    - rule_18.9.97.1.2
+    - patch
 
 - name: "SCORED | 18.9.97.1.3 | PATCH | L1 Ensure Disallow Digest authentication is set to Enabled"
   win_regedit:
@@ -2441,7 +2441,6 @@
     - level2
     - rule_18.9.97.1.3
     - patch
-
 
 #This control will have to be set to Enabled (1) to allow for continued remote management via Ansible following machine restart
 - name: "SCORED | 18.9.97.2.2 | PATCH | L2 Ensure Allow remote server management through WinRM is set to Disabled"
