--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,29 +29,29 @@
 #   tags:
 #       - prelim_tasks
 
-- name: Execute the section 1 tasks
-  import_tasks: section01.yml
-  when: section01_patch | bool
-  tags:
-      - section01
+# - name: Execute the section 1 tasks
+#   import_tasks: section01.yml
+#   when: section01_patch | bool
+#   tags:
+#       - section01
 
-- name: Execute the section 2 tasks
-  import_tasks: section02.yml
-  when: section02_patch | bool
-  tags:
-      - section02
+# - name: Execute the section 2 tasks
+#   import_tasks: section02.yml
+#   when: section02_patch | bool
+#   tags:
+#       - section02
 
-- name: Execute the section 9 tasks
-  import_tasks: section09.yml
-  when: section09_patch | bool
-  tags:
-      - section09
+# - name: Execute the section 9 tasks
+#   import_tasks: section09.yml
+#   when: section09_patch | bool
+#   tags:
+#       - section09
 
-- name: Execute the section 17 tasks
-  import_tasks: section17.yml
-  when: section17_patch | bool
-  tags:
-      - section17
+# - name: Execute the section 17 tasks
+#   import_tasks: section17.yml
+#   when: section17_patch | bool
+#   tags:
+#       - section17
 
 - name: Execute the section 18 tasks
   import_tasks: section18.yml
