--- a/tasks/section18.yml
+++ b/tasks/section18.yml
@@ -1695,8 +1695,8 @@
   win_regedit:
     path: HKLM:\Software\Policies\Microsoft\Windows\EventLog\Application
     name: Retention
-    data: 0
-    type: dword
+    data: "0"
+    type: string
   when: rule_18_9_26_1_1
   tags:
     - level1
